Speed Powerup added

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -211,7 +211,6 @@ LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Powerups/BP_TestPickupPowerup.BP_TestPickupPowerup
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1339,10 +1338,25 @@ MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+BP_Powerup_Speed_C.Tick=True
+BP_Powerup_Speed_C.Powerups=True
+BP_Powerup_Speed_C.Replication=True
+BP_Powerup_Speed_C.Rendering=True
+BP_Powerup_Speed_C.Collision=True
+BP_Powerup_Speed_C.Actor=True
+BP_Powerup_Speed_C.Input=True
+BP_PowerupPickup_C.Tick=True
+BP_PowerupPickup_C.Replication=True
+BP_PowerupPickup_C.Rendering=True
+BP_PowerupPickup_C.Collision=True
+BP_PowerupPickup_C.Actor=True
+BP_PowerupPickup_C.Input=True
+BP_Powerup_Speed_C.TransformCommon=True
+BP_TestPickupPowerup_C.PickupActor=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.05.09-20.11.53
-TheMaze.LastCompileMethod=External
+TheMaze.TimeStamp=2021.05.09-21.45.59
+TheMaze.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -2205,6 +2219,8 @@ BlastCore.TimeStamp=2021.03.03-22.22.29
 BlastCore.LastCompileMethod=Unknown
 DatasmithC4DTranslator.TimeStamp=2021.03.03-22.21.38
 DatasmithC4DTranslator.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2021.03.03-22.11.13
+MaterialEditor.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -2299,12 +2315,12 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" "
-Object=
-CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+CharacterMovementComponent=
+PawnMovementComponent=
+NavMovementComponent=
 MovementComponent=
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -2315,6 +2331,10 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2331,6 +2351,7 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
+RecentlyPlaced=/Game/Powerups/BP_Powerup_Speed.BP_Powerup_Speed;
 RecentlyPlaced=/Game/Powerups/BP_TestPickupPowerup.BP_TestPickupPowerup;
 RecentlyPlaced=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter;
 RecentlyPlaced=/Game/Blueprints/BP_FPSExtractionZone.BP_FPSExtractionZone;
@@ -2350,26 +2371,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_Powerup_Speed
-MRUItem1=/Game/Powerups/BP_TestPickupPowerup
-MRUItem2=/Game/Powerups/M_PowerupDecal
-MRUItem3=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem4=/Game/Blueprints/BP_CollectibleSphere
-MRUItem5=/Game/Blueprints/BP_MazeGameMode2
-MRUItem6=/Game/Blueprints/BP_CFPSCharacter
-MRUItem7=/Game/Blueprints/BP_ViewPoint
-MRUItem8=/Game/Blueprints/BP_GameComplete
-MRUItem9=/Game/Blueprints/WBP_Crosshair
-MRUItem10=/Game/Blueprints/BP_MazeGameMode
-MRUItem11=/Engine/VREditor/BasicMeshes/MI_Ball_01
-MRUItem12=/Engine/VREditor/BasicMeshes/SM_Cube_01
-MRUItem13=/Game/Blueprints/BP_Interactable
-MRUItem14=/Game/Blueprints/WBP_ScoreCounter
-MRUItem15=/Game/Blueprints/BP_PointsWidget
-MRUItem16=/Game/MyExtractionZone
-MRUItem17=/Game/Blueprints/BP_ExtractionZone
-MRUItem18=/Game/Blueprints/ExtractionZone2_Blueprint
-MRUItem19=/Game/Blueprints/WBP_Counter
+MRUItem0=/Game/Powerups/BP_TestPickupPowerup
+MRUItem1=/Game/Powerups/BP_Powerup_Speed
+MRUItem2=/Game/Powerups/BP_PowerupPickup
+MRUItem3=/Game/Powerups/M_PowerupDecal
+MRUItem4=/Game/Blueprints/BP_FPSExtractionZone
+MRUItem5=/Game/Blueprints/BP_CollectibleSphere
+MRUItem6=/Game/Blueprints/BP_MazeGameMode2
+MRUItem7=/Game/Blueprints/BP_CFPSCharacter
+MRUItem8=/Game/Blueprints/BP_ViewPoint
+MRUItem9=/Game/Blueprints/BP_GameComplete
+MRUItem10=/Game/Blueprints/WBP_Crosshair
+MRUItem11=/Game/Blueprints/BP_MazeGameMode
+MRUItem12=/Engine/VREditor/BasicMeshes/MI_Ball_01
+MRUItem13=/Engine/VREditor/BasicMeshes/SM_Cube_01
+MRUItem14=/Game/Blueprints/BP_Interactable
+MRUItem15=/Game/Blueprints/WBP_ScoreCounter
+MRUItem16=/Game/Blueprints/BP_PointsWidget
+MRUItem17=/Game/MyExtractionZone
+MRUItem18=/Game/Blueprints/BP_ExtractionZone
+MRUItem19=/Game/Blueprints/ExtractionZone2_Blueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
