Countdown bug fixed

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -210,8 +210,8 @@ BP_ViewPoint_C=StaticMeshComponent.Collision.Collision,
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/WBP_Crosshair.WBP_Crosshair
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1366,8 +1366,8 @@ WrapBox.Navigation=True
 WrapBox.Localization=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.05.16-19.37.39
-TheMaze.LastCompileMethod=External
+TheMaze.TimeStamp=2021.05.22-19.20.09
+TheMaze.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -2446,13 +2446,13 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_CFPSCharacter
+MRUItem0=/Game/Blueprints/WBP_Crosshair
 MRUItem1=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem2=/Game/Blueprints/BP_MazeGameMode2
-MRUItem3=/Game/Blueprints/WBP_GameComplete
-MRUItem4=/Game/Blueprints/BP_ViewPoint
-MRUItem5=/Game/Blueprints/WBP_Crosshair
-MRUItem6=/Game/Blueprints/BP_CollectibleSphere
+MRUItem2=/Game/Blueprints/BP_CollectibleSphere
+MRUItem3=/Game/Blueprints/BP_MazeGameMode2
+MRUItem4=/Game/Blueprints/BP_CFPSCharacter
+MRUItem5=/Game/Blueprints/WBP_GameComplete
+MRUItem6=/Game/Blueprints/BP_ViewPoint
 MRUItem7=/Game/Blueprints/BP_MazeGameMode
 MRUItem8=/Game/Powerups/BP_TestPickupPowerup
 MRUItem9=/Game/Powerups/BP_Powerup_Speed
@@ -2538,7 +2538,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
