--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -16,7 +16,7 @@ bAnimationReimportWarnings=False
 bSCSEditorShowFloor=True
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
-MaterialQualityLevel=1
+MaterialQualityLevel=3
 PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
@@ -211,7 +211,6 @@ LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/WBP_Crosshair.WBP_Crosshair
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1366,8 +1365,8 @@ WrapBox.Navigation=True
 WrapBox.Localization=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.05.22-19.20.09
-TheMaze.LastCompileMethod=Runtime
+TheMaze.TimeStamp=2021.05.24-05.27.10
+TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -2404,8 +2403,8 @@ StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" 
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
