Countdown method improved

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -211,6 +211,7 @@ LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1365,8 +1366,8 @@ WrapBox.Navigation=True
 WrapBox.Localization=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.05.24-05.27.10
-TheMaze.LastCompileMethod=External
+TheMaze.TimeStamp=2021.05.28-14.13.59
+TheMaze.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -2403,8 +2404,8 @@ StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" 
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
@@ -2445,11 +2446,11 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/WBP_Crosshair
-MRUItem1=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem2=/Game/Blueprints/BP_CollectibleSphere
-MRUItem3=/Game/Blueprints/BP_MazeGameMode2
-MRUItem4=/Game/Blueprints/BP_CFPSCharacter
+MRUItem0=/Game/Blueprints/BP_CFPSCharacter
+MRUItem1=/Game/Blueprints/WBP_Crosshair
+MRUItem2=/Game/Blueprints/BP_FPSExtractionZone
+MRUItem3=/Game/Blueprints/BP_CollectibleSphere
+MRUItem4=/Game/Blueprints/BP_MazeGameMode2
 MRUItem5=/Game/Blueprints/WBP_GameComplete
 MRUItem6=/Game/Blueprints/BP_ViewPoint
 MRUItem7=/Game/Blueprints/BP_MazeGameMode
@@ -2537,7 +2538,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
