Powerup Speed graphic updated

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -210,7 +210,9 @@ BP_ViewPoint_C=StaticMeshComponent.Collision.Collision,
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Powerups/BP_Powerup_Speed.BP_Powerup_Speed
+OpenAssetsAtExit=/Game/Powerups/M_Powerup_LightFunction.M_Powerup_LightFunction
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1387,9 +1389,29 @@ BackgroundBlur.Performance=True
 BackgroundBlur.Clipping=True
 BackgroundBlur.Navigation=True
 BackgroundBlur.Localization=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionSine.MaterialExpressionSine=True
+MaterialExpressionSine.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
+BP_PowerupSpeed_Pickup_C.TransformCommon=True
+BP_PowerupSpeed_Pickup_C.Shape=True
+BP_PowerupSpeed_Pickup_C.Navigation=True
+BP_PowerupSpeed_Pickup_C.Physics=True
+BP_PowerupSpeed_Pickup_C.Tags=True
+BP_PowerupSpeed_Pickup_C.Cooking=True
+BP_PowerupSpeed_Pickup_C.Decal=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.05.29-19.28.53
+TheMaze.TimeStamp=2021.05.31-10.16.29
 TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
@@ -2423,8 +2445,8 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
+StaticMesh=
+StreamableRenderAsset=
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
 Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
@@ -2433,8 +2455,8 @@ StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Response
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent=
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SphereComponent=
+ShapeComponent=
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2471,26 +2493,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_MazeGameMode2
-MRUItem1=/Game/Blueprints/BP_GameOver
-MRUItem2=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem3=/Game/Blueprints/BP_CollectibleSphere
+MRUItem0=/Game/Powerups/M_Powerup_LightFunction
+MRUItem1=/Game/Powerups/BP_Powerup_Speed
+MRUItem2=/Game/Powerups/SpeedIcon
+MRUItem3=/Game/Powerups/M_Powerup
 MRUItem4=/Game/Blueprints/BP_CFPSCharacter
-MRUItem5=/Game/Blueprints/WBP_Crosshair
-MRUItem6=/Game/Blueprints/WBP_GameComplete
-MRUItem7=/Game/Blueprints/BP_ViewPoint
-MRUItem8=/Game/Powerups/BP_Powerup_Countdown
-MRUItem9=/Game/Powerups/BP_PowerupSpeed_Pickup
-MRUItem10=/Game/Powerups/BP_TestPickupPowerup
-MRUItem11=/Game/Powerups/BP_Powerup_Speed
-MRUItem12=/Game/Blueprints/BP_MazeGameMode
-MRUItem13=/Game/Powerups/BP_PowerupPickup
-MRUItem14=/Game/Powerups/M_PowerupDecal
-MRUItem15=/Game/Blueprints/BP_GameComplete
-MRUItem16=/Engine/VREditor/BasicMeshes/MI_Ball_01
-MRUItem17=/Engine/VREditor/BasicMeshes/SM_Cube_01
-MRUItem18=/Game/Blueprints/BP_Interactable
-MRUItem19=/Game/Blueprints/WBP_ScoreCounter
+MRUItem5=/Game/Blueprints/BP_MazeGameMode2
+MRUItem6=/Game/Blueprints/BP_GameOver
+MRUItem7=/Game/Blueprints/BP_FPSExtractionZone
+MRUItem8=/Game/Blueprints/BP_CollectibleSphere
+MRUItem9=/Game/Blueprints/WBP_Crosshair
+MRUItem10=/Game/Blueprints/WBP_GameComplete
+MRUItem11=/Game/Blueprints/BP_ViewPoint
+MRUItem12=/Game/Powerups/BP_Powerup_Countdown
+MRUItem13=/Game/Powerups/BP_PowerupSpeed_Pickup
+MRUItem14=/Game/Powerups/BP_TestPickupPowerup
+MRUItem15=/Game/Blueprints/BP_MazeGameMode
+MRUItem16=/Game/Powerups/BP_PowerupPickup
+MRUItem17=/Game/Powerups/M_PowerupDecal
+MRUItem18=/Game/Blueprints/BP_GameComplete
+MRUItem19=/Engine/VREditor/BasicMeshes/MI_Ball_01
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2523,6 +2545,7 @@ MRUItem19=/Game/Blueprints/WBP_ScoreCounter
 /Game/Powerups/BP_PowerupSpeed_Pickup.BP_PowerupSpeed_Pickup=0
 /Game/Powerups/BP_Powerup_Speed.BP_Powerup_Speed=0
 /Game/Blueprints/BP_GameOver.BP_GameOver=1
+/Game/Powerups/SpeedIcon.SpeedIcon=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2730,4 +2753,7 @@ FrameNumberDisplayFormat=Seconds
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
 Property=0.500000
 Value=1.000000
+
+[SuppressableDialogs]
+Warning_NoPreviewMeshFound=False
 
