Time Bonus Powerup improved

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -200,7 +200,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.AnyKey,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.ActionMappings.Interact,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.AnyKey,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.ActionMappings.Interact,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
+MaterialInstanceConstant=
 MeshProcessingEnterpriseSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.AnyKey,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.ActionMappings.Interact,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 StaticMeshComponent=
@@ -212,8 +212,7 @@ SphereComponent=
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Powerups/BP_Powerup_Countdown.BP_Powerup_Countdown
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1433,9 +1432,21 @@ TimeComponent.Events=True
 BP_PowerupSpeed_Pickup_C.HLOD=False
 BP_PowerupSpeed_Pickup_C.Mobile=False
 BP_PowerupSpeed_Pickup_C.AssetUserData=False
+WBP_PowerupCountdownText_C.Appearance=True
+WBP_PowerupCountdownText_C.Designer=True
+WBP_PowerupCountdownText_C.Input=True
+WBP_PowerupCountdownText_C.Interaction=True
+WBP_PowerupCountdownText_C.Performance=True
+WBP_PowerupCountdownText_C.Layout=True
+WBP_PowerupCountdownText_C.Behavior=True
+WBP_PowerupCountdownText_C.Render Transform=True
+WBP_PowerupCountdownText_C.Accessibility=True
+WBP_PowerupCountdownText_C.Clipping=True
+WBP_PowerupCountdownText_C.Navigation=True
+WBP_PowerupCountdownText_C.Localization=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.05.31-16.18.43
+TheMaze.TimeStamp=2021.05.31-20.30.21
 TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
@@ -2322,7 +2333,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Powerups
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2468,21 +2479,27 @@ ActorComponent=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
+MaterialEditorInstanceConstant=
 StaticMesh=
 StreamableRenderAsset=
-TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
+StaticMeshComponent=
+MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 SphereComponent=
 ShapeComponent=
 BP_PowerupSpeed_Pickup_C="\"Object.Components.SphereComp.Object.Collision.BodyInstance\" "
 SPowerUpActor="\"Object.Components.SphereComp.Object.Collision.BodyInstance\" "
+PointLightComponent="\"Object.Light.LightColor\" "
+LocalLightComponent="\"Object.Light.LightColor\" "
+LightComponent="\"Object.Light.LightColor\" "
+LightComponentBase="\"Object.Light.LightColor\" "
+WBP_PowerupCountdownText_C=
+UserWidget=
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2499,6 +2516,7 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
+RecentlyPlaced=/Game/Powerups/BP_PowerupSpeed_Pickup.BP_PowerupSpeed_Pickup;
 RecentlyPlaced=/Game/Powerups/BP_Powerup_Speed.BP_Powerup_Speed;
 RecentlyPlaced=/Game/Powerups/BP_TestPickupPowerup.BP_TestPickupPowerup;
 RecentlyPlaced=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter;
@@ -2519,26 +2537,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_Powerup_Countdown
-MRUItem1=/Game/Powerups/BP_Powerup_Speed
-MRUItem2=/Game/Blueprints/BP_CFPSCharacter
-MRUItem3=/Game/Powerups/BP_PowerupSpeed_Pickup
-MRUItem4=/Game/Powerups/NewBlueprint
-MRUItem5=/Game/Powerups/M_Powerup_LightFunction
-MRUItem6=/Game/Powerups/SpeedIcon
-MRUItem7=/Game/Powerups/M_Powerup
-MRUItem8=/Game/Blueprints/BP_MazeGameMode2
-MRUItem9=/Game/Blueprints/BP_GameOver
-MRUItem10=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem11=/Game/Blueprints/BP_CollectibleSphere
-MRUItem12=/Game/Blueprints/WBP_Crosshair
-MRUItem13=/Game/Blueprints/WBP_GameComplete
-MRUItem14=/Game/Blueprints/BP_ViewPoint
-MRUItem15=/Game/Powerups/BP_TestPickupPowerup
-MRUItem16=/Game/Blueprints/BP_MazeGameMode
-MRUItem17=/Game/Powerups/BP_PowerupPickup
-MRUItem18=/Game/Powerups/M_PowerupDecal
-MRUItem19=/Game/Blueprints/BP_GameComplete
+MRUItem0=/Game/Blueprints/BP_MazeGameMode
+MRUItem1=/Game/Blueprints/BP_CollectibleSphere
+MRUItem2=/Game/Blueprints/WBP_PowerupCountdownText
+MRUItem3=/Game/Powerups/BP_Powerup_Countdown
+MRUItem4=/Game/Powerups/M_Powerup_Countdown
+MRUItem5=/Game/Powerups/HealthIcon
+MRUItem6=/Game/Powerups/M_Powerup
+MRUItem7=/Game/Powerups/BP_Powerup_Speed
+MRUItem8=/Game/Blueprints/BP_CFPSCharacter
+MRUItem9=/Game/Powerups/BP_PowerupSpeed_Pickup
+MRUItem10=/Game/Powerups/NewBlueprint
+MRUItem11=/Game/Powerups/M_Powerup_LightFunction
+MRUItem12=/Game/Powerups/SpeedIcon
+MRUItem13=/Game/Blueprints/BP_MazeGameMode2
+MRUItem14=/Game/Blueprints/BP_GameOver
+MRUItem15=/Game/Blueprints/BP_FPSExtractionZone
+MRUItem16=/Game/Blueprints/WBP_Crosshair
+MRUItem17=/Game/Blueprints/WBP_GameComplete
+MRUItem18=/Game/Blueprints/BP_ViewPoint
+MRUItem19=/Game/Powerups/BP_TestPickupPowerup
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2573,6 +2591,10 @@ MRUItem19=/Game/Blueprints/BP_GameComplete
 /Game/Blueprints/BP_GameOver.BP_GameOver=1
 /Game/Powerups/SpeedIcon.SpeedIcon=0
 /Game/Powerups/BP_Powerup_Countdown.BP_Powerup_Countdown=0
+/Game/Powerups/M_Powerup.M_Powerup=0
+/Game/Powerups/M_Powerup_Countdown.M_Powerup_Countdown=0
+/Game/Powerups/HealthIcon.HealthIcon=0
+/Game/Blueprints/WBP_PowerupCountdownText.WBP_PowerupCountdownText=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2616,7 +2638,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2711,7 +2733,7 @@ bMaterialQualityUsed[3]=0
 [MaterialInstanceEditor]
 bShowGrid=False
 bDrawGrid=False
-PrimType=1
+PrimType=0
 
 [SelectionDetails]
 PreserveScaleRatio=True
