--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Main.Main
-EditorStartupMap=/Game/Maps/Main.Main
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_MazeGameMode.BP_MazeGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
