--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,8 +126,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Main
+MRUItem0=/Game/Maps/MainMenu
+MRUItem1=/Game/Maps/TestLevel
+MRUItem2=/Game/Maps/Main
+MRUItem3=/Game/Maps/Level3
+MRUItem4=/Game/Main
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.AnyKey,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.ActionMappings.Interact,
@@ -209,10 +212,12 @@ BP_PowerupSpeed_Pickup_C=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_Po
 SphereComponent=
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/Maps/MainMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/WBP_MainMenu.WBP_MainMenu
+OpenAssetsAtExit=/Game/Maps/PC_MainMenu.PC_MainMenu
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1444,6 +1449,42 @@ WBP_PowerupCountdownText_C.Accessibility=True
 WBP_PowerupCountdownText_C.Clipping=True
 WBP_PowerupCountdownText_C.Navigation=True
 WBP_PowerupCountdownText_C.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+WBP_MainMenu_C.Appearance=True
+WBP_MainMenu_C.Designer=True
+WBP_MainMenu_C.Input=True
+WBP_MainMenu_C.Interaction=True
+WBP_MainMenu_C.Performance=True
+WBP_MainMenu_C.Layout=True
+WBP_MainMenu_C.Behavior=True
+WBP_MainMenu_C.Render Transform=True
+WBP_MainMenu_C.Accessibility=True
+WBP_MainMenu_C.Clipping=True
+WBP_MainMenu_C.Navigation=True
+WBP_MainMenu_C.Localization=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Actor=True
+MainMenu_C.Input=True
+PC_MainMenu_C.PlayerController=True
+PC_MainMenu_C.Tick=True
+PC_MainMenu_C.Cheat Manager=True
+PC_MainMenu_C.MouseInterface=True
+PC_MainMenu_C.Game=True
+PC_MainMenu_C.Controller=True
+PC_MainMenu_C.Replication=True
+PC_MainMenu_C.Actor=True
+PC_MainMenu_C.Input=True
 
 [ModuleFileTracking]
 TheMaze.TimeStamp=2021.05.31-20.30.21
@@ -2333,7 +2374,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2482,10 +2523,10 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MaterialEditorInstanceConstant=
 StaticMesh=
 StreamableRenderAsset=
-TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -2500,6 +2541,12 @@ LightComponent="\"Object.Light.LightColor\" "
 LightComponentBase="\"Object.Light.LightColor\" "
 WBP_PowerupCountdownText_C=
 UserWidget=
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+BackgroundBlur="\"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Render Transform.RenderTransform\" "
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2537,26 +2584,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_MazeGameMode
-MRUItem1=/Game/Blueprints/BP_CollectibleSphere
-MRUItem2=/Game/Blueprints/WBP_PowerupCountdownText
-MRUItem3=/Game/Powerups/BP_Powerup_Countdown
-MRUItem4=/Game/Powerups/M_Powerup_Countdown
-MRUItem5=/Game/Powerups/HealthIcon
-MRUItem6=/Game/Powerups/M_Powerup
-MRUItem7=/Game/Powerups/BP_Powerup_Speed
-MRUItem8=/Game/Blueprints/BP_CFPSCharacter
-MRUItem9=/Game/Powerups/BP_PowerupSpeed_Pickup
-MRUItem10=/Game/Powerups/NewBlueprint
-MRUItem11=/Game/Powerups/M_Powerup_LightFunction
-MRUItem12=/Game/Powerups/SpeedIcon
-MRUItem13=/Game/Blueprints/BP_MazeGameMode2
-MRUItem14=/Game/Blueprints/BP_GameOver
-MRUItem15=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem16=/Game/Blueprints/WBP_Crosshair
-MRUItem17=/Game/Blueprints/WBP_GameComplete
-MRUItem18=/Game/Blueprints/BP_ViewPoint
-MRUItem19=/Game/Powerups/BP_TestPickupPowerup
+MRUItem0=/Game/Maps/PC_MainMenu
+MRUItem1=/Game/Blueprints/BP_MazeGameMode
+MRUItem2=/Game/Blueprints/BP_MazeGameMode2
+MRUItem3=/Game/Blueprints/WBP_MainMenu
+MRUItem4=/Game/Maps/MainMenu
+MRUItem5=/Game/Maps/TestLevel
+MRUItem6=/Game/Maps/Main
+MRUItem7=/Game/Blueprints/BP_CollectibleSphere
+MRUItem8=/Game/Blueprints/WBP_PowerupCountdownText
+MRUItem9=/Game/Powerups/BP_Powerup_Countdown
+MRUItem10=/Game/Powerups/M_Powerup_Countdown
+MRUItem11=/Game/Powerups/HealthIcon
+MRUItem12=/Game/Powerups/M_Powerup
+MRUItem13=/Game/Powerups/BP_Powerup_Speed
+MRUItem14=/Game/Blueprints/BP_CFPSCharacter
+MRUItem15=/Game/Powerups/BP_PowerupSpeed_Pickup
+MRUItem16=/Game/Powerups/NewBlueprint
+MRUItem17=/Game/Powerups/M_Powerup_LightFunction
+MRUItem18=/Game/Powerups/SpeedIcon
+MRUItem19=/Game/Blueprints/BP_GameOver
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
