--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
-EditorStartupMap=/Game/Maps/TestLevel.TestLevel
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_MazeGameMode.BP_MazeGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
