--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -229,11 +229,6 @@ LastLevel=/Game/Maps/TestLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/WBP_PauseMenu.WBP_PauseMenu
-OpenAssetsAtExit=/Game/Blueprints/WBP_MainMenu.WBP_MainMenu
-OpenAssetsAtExit=/Game/Blueprints/WBP_Credits.WBP_Credits
-OpenAssetsAtExit=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter
-OpenAssetsAtExit=/Game/Blueprints/WBP_Purpose.WBP_Purpose
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1591,6 +1586,29 @@ WBP_PauseMenu_C.Accessibility=True
 WBP_PauseMenu_C.Clipping=True
 WBP_PauseMenu_C.Navigation=True
 WBP_PauseMenu_C.Localization=True
+WBP_GameComplete_C.Appearance=True
+WBP_GameComplete_C.Designer=True
+WBP_GameComplete_C.Input=True
+WBP_GameComplete_C.Interaction=True
+WBP_GameComplete_C.Performance=True
+WBP_GameComplete_C.Layout=True
+WBP_GameComplete_C.Behavior=True
+WBP_GameComplete_C.Render Transform=True
+WBP_GameComplete_C.Accessibility=True
+WBP_GameComplete_C.Clipping=True
+WBP_GameComplete_C.Navigation=True
+WBP_GameComplete_C.Localization=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
 
 [ModuleFileTracking]
 TheMaze.TimeStamp=2021.06.12-19.47.13
@@ -2617,7 +2635,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
@@ -2631,8 +2649,8 @@ StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" 
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
@@ -2648,12 +2666,12 @@ LightComponentBase="\"Object.Light.LightColor\" "
 WBP_PowerupCountdownText_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 BackgroundBlur="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-WBP_Crosshair_C="\"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+WBP_Crosshair_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
 WBP_Credits_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 WBP_Purpose_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
@@ -2661,6 +2679,10 @@ VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transfo
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 WBP_GameOver_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 WBP_PauseMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+EditableTextBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+WBP_GameComplete_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+ProgressBar="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+WBP_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2699,26 +2721,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/WBP_Credits
-MRUItem1=/Game/Blueprints/WBP_MainMenu
-MRUItem2=/Game/Maps/TestLevel
-MRUItem3=/Game/Maps/MainMenu
-MRUItem4=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem5=/Game/Blueprints/WBP_Purpose
-MRUItem6=/Game/Blueprints/BP_CFPSCharacter
-MRUItem7=/Game/Blueprints/WBP_PauseMenu
-MRUItem8=/Game/Blueprints/BP_MazeGameMode2
-MRUItem9=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem10=/Game/Blueprints/WBP_GameOver
-MRUItem11=/Game/Blueprints/WBP_PowerupCountdownText
-MRUItem12=/Game/Powerups/BP_Powerup_Countdown
-MRUItem13=/Game/Maps/PC_MainMenu
-MRUItem14=/Game/Powerups/BP_Powerup_Speed
-MRUItem15=/Game/Powerups/BP_PowerupSpeed_Pickup
-MRUItem16=/Game/Blueprints/BP_CollectibleSphere
-MRUItem17=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
-MRUItem18=/Game/Blueprints/BP_SpawnPoint
-MRUItem19=/Game/Maps/EasyMap
+MRUItem0=/Game/Blueprints/BP_FPSExtractionZone
+MRUItem1=/Game/Blueprints/BP_CollectibleSphere
+MRUItem2=/Game/Blueprints/BP_CFPSCharacter
+MRUItem3=/Game/Maps/TestLevel
+MRUItem4=/Game/Maps/MainMenu
+MRUItem5=/Game/Blueprints/WBP_PauseMenu
+MRUItem6=/Game/Blueprints/WBP_GameOver1
+MRUItem7=/Game/Blueprints/BP_MazeGameMode2
+MRUItem8=/Game/Blueprints/WBP_MainMenu
+MRUItem9=/Game/Blueprints/WBP_Purpose
+MRUItem10=/Game/Blueprints/WBP_Crosshair
+MRUItem11=/Game/Blueprints/WBP_GameComplete
+MRUItem12=/Game/Blueprints/WBP_Credits
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/Blueprints/WBP_GameOver
+MRUItem15=/Game/Blueprints/WBP_PowerupCountdownText
+MRUItem16=/Game/Powerups/BP_Powerup_Countdown
+MRUItem17=/Game/Maps/PC_MainMenu
+MRUItem18=/Game/Powerups/BP_Powerup_Speed
+MRUItem19=/Game/Powerups/BP_PowerupSpeed_Pickup
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2763,8 +2785,10 @@ MRUItem19=/Game/Maps/EasyMap
 /Game/Maps/PC_MainMenu.PC_MainMenu=1
 /Game/Blueprints/WBP_Purpose.WBP_Purpose=0
 /Game/Blueprints/WBP_GameOver.WBP_GameOver=0
-/Game/Blueprints/WBP_MainMenu.WBP_MainMenu=1
-/Game/Blueprints/WBP_Credits.WBP_Credits=1
+/Game/Blueprints/WBP_MainMenu.WBP_MainMenu=0
+/Game/Blueprints/WBP_Credits.WBP_Credits=0
+/Game/Blueprints/WBP_PauseMenu.WBP_PauseMenu=0
+/Game/Blueprints/WBP_GameOver1.WBP_GameOver1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2829,7 +2853,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [WidgetTemplatesExpanded]
-Editor=False
+Editor=True
 Input=False
 Lists=False
 Misc=False
@@ -2840,7 +2864,6 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
-Common=False
 
 [MaterialEditor]
 PrimType=0
@@ -2979,4 +3002,8 @@ ChangeVariableType_Warning=False
 [/Script/UnrealEd.ClassViewerSettings]
 DisplayInternalClasses=True
 DeveloperFolderType=CVDT_All
+
+[DetailCategoriesAdvanced]
+CanvasPanel.Behavior=True
+TextBlock.Wrapping=True
 
